fix(whiteframe): working with dp insted of z-index
Closes #4706.

--- a/src/components/whiteframe/demoBasicUsage/style.css
+++ b/src/components/whiteframe/demoBasicUsage/style.css
@@ -1,5 +1,5 @@
 md-whiteframe {
   background: #fff;
-  margin: 20px;
-  padding: 20px;
+  margin: 30px;
+  height: 100px;
 }
